2022-07-29  Josef Cejka <jcejka@suse.de>

	* debuginfod.cxx: Create db indexes for fast delete while grooming.

2022-06-03  Michael Trapp <michael.trapp@sap.com>

	* debuginfod.cxx (scan_source_info): New global.
	(parse_opt, elf_classify): Use it.

2022-05-09  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (debuginfod_clean_cache): Move utime call to
	before fts traversal.

2022-05-09  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (debuginfod_init_cache): Remove.
	(debuginfod_query_server): Don't call debuginfod_init_cache, call
	mkdir then debuginfod_clean_cache.

2022-05-09  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (debuginfod_config_cache): Always open with
	O_CREATE first, then use fstat, only write the cache_config_default_s
	value if st_size == 0, otherwise read value from file.

2022-05-09  Mark Wielaard  <mark@klomp.org>

	* debuginfod.cxx (conninfo): Always provide servname to getnameinfo.

2022-05-09  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (debuginfod_query_server): Add
	curl_easy_setopt_ck macro, use it for all curl_easy_setopt calls.

2022-05-09  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (debuginfod_write_callback): Check result
	of curl_easy_getinfo.

2022-05-05  Mark Wielaard  <mark@klomp.org>

	* debuginfod.cxx (main): Define use_epoll. Set to MHD_USE_EPOLL
	based on MHD_VERSION. Don't use MHD_USE_THREAD_PER_CONNECTION
	when use_poll is set.

2022-05-05  Mark Wielaard  <mark@klomp.org>

	* debuginfod.cxx (main): Define mhd_flags. Use mhd_flags for
	MHD_start_daemon. Try again with MHD_USE_DUAL_STACK removed if
	that fails. Update clog to say either IPV4 or IPV4 and IPV6.
	stop either ithe d46 or d4 daemonr.

2022-05-09  Noah Sanci  <nsanci@redhat.com>

	* debuginfod.cxx (main): Set nonzero defaults for fdcache.

2022-05-04  Frank Ch. Eigler <fche@redhat.com>
	    Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (debuginfod_query_server): Correct fd leak